# eve-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  glama.json  install.sh  pyproject.toml  smithery.yaml
eve_client/: __init__.py  __main__.py  _version.py  apply.py  atomic.py  backup.py  claude_hook_entry.py  claude_hooks.py  cli.py  config.py  gemini_hook_entry.py  gemini_hooks.py  integrity.py  interactive.py  lock.py  manifest.py  memory_cli.py  merge.py  models.py  oauth_device.py  operation_policy.py  operations.py  path_policy.py  plan.py  recovery.py  safe_fs.py  server.py  state_binding.py  state_dir.py  tool_state.py  transaction_state.py  tty.py  uninstall.py  verify.py
eve_client/auth/: __init__.py  base.py  (+3 more)
examples/: README.md  claude-code-mcp.json  codex-cli-mcp.toml  gemini-cli-mcp.json
repo-template/: release-eve-client.yml
scripts/: build-eve-client-release.sh  export-eve-client-standalone.sh  install-eve-client.sh
tests/: test_apply.py  test_architecture.py  test_atomic.py  test_auth_store.py  test_claude_hooks.py  test_cli.py  test_config.py  test_detect.py  test_distribution.py  test_gemini_hooks.py  test_ide_integration.py  test_importer_adapters.py  test_importer_cli.py  test_importer_ledger.py  test_importer_upload.py  test_interactive.py  test_lock.py  test_manifest.py  test_memory_cli.py  test_merge.py  test_oauth_device.py  test_operations.py  test_package_isolation.py  test_plan.py  test_safe_fs.py  test_state_binding.py  test_state_dir.py  test_transaction_state.py  test_uninstall.py  test_verify.py  test_version_and_main.py
(+17 files in other folders)
