[project]
name = "eve-client"
version = "0.1.0"
description = "Eve client installer and local tool integration CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sherif Kozman" },
]
keywords = ["eve", "mcp", "ai", "cli", "installer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "keyring>=25.6",
    "tomli-w>=1.2",
    "typer>=0.15",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://evemem.com"
Repository = "https://github.com/sherifkozman/eve-mcp"
Issues = "https://github.com/sherifkozman/eve-mcp/issues"

[project.scripts]
eve = "eve_client.cli:main"
eve-claude-hook = "eve_client.claude_hooks:main"
eve-gemini-hook = "eve_client.gemini_hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "eve_client/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["eve_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
